--- a/YTX_Android_IM_Demo_v5.2.1r_AndroidStudio/app/src/main/res/layout/chatting_item_to.xml
+++ b/YTX_Android_IM_Demo_v5.2.1r_AndroidStudio/app/src/main/res/layout/chatting_item_to.xml
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"/>
 
-            <com.yuntongxun.ecdemo.ui.chatting.base.EmojiconTextView
+            <com.melink.bqmmsdk.widget.BQMMMessageText
                 android:id="@+id/chatting_content_itv"
                 style="@style/ChattingUIText"
                 android:layout_width="wrap_content"
