--- a/YTX_Android_IM_Demo_v5.2.1r_AndroidStudio/BQMM_Lib/res/layout/bqmm_message_view_left.xml
+++ b/YTX_Android_IM_Demo_v5.2.1r_AndroidStudio/BQMM_Lib/res/layout/bqmm_message_view_left.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
      >
     
-    <TextView
+    <com.melink.bqmmsdk.widget.BQMMMessageText
             android:maxWidth="225.0dip"
             android:id="@+id/bqmm_message_tv"
             android:layout_width="wrap_content"
