--- a/YTX_Android_IM_Demo_v5.2.1r_AndroidStudio/BQMM_Lib/res/layout/bqmm_message_view_right.xml
+++ b/YTX_Android_IM_Demo_v5.2.1r_AndroidStudio/BQMM_Lib/res/layout/bqmm_message_view_right.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
-   <TextView
+   <com.melink.bqmmsdk.widget.BQMMMessageText
             android:maxWidth="225.0dip"
             android:id="@+id/bqmm_message_tv"
             android:layout_width="wrap_content"
