--- a/YTX_Android_IM_Demo_v5.2.1r_AndroidStudio/app/src/main/res/layout/ccp_chatting_footer2.xml
+++ b/YTX_Android_IM_Demo_v5.2.1r_AndroidStudio/app/src/main/res/layout/ccp_chatting_footer2.xml
@@ -53,7 +53,7 @@
             android:background="@drawable/edittext_group_bg_selector"
             android:orientation="horizontal" >
 
-            <com.yuntongxun.ecdemo.ui.chatting.base.EmojiconEditText
+            <com.melink.bqmmsdk.widget.BQMMEditView
                 android:textColor="@color/black"
                 android:id="@+id/chatting_content_et"
                 android:background="@null"
@@ -128,7 +128,7 @@
                     android:src="@drawable/type_select_btn"
                     android:visibility="gone" />
 
-                <Button
+                <com.melink.bqmmsdk.widget.BQMMSendButton
                     android:id="@+id/chatting_send_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/ChattingFootSendHeight"
@@ -250,6 +250,11 @@
             android:id="@+id/chatting_app_panel"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
-    </FrameLayout>
 
+    </FrameLayout>
+    <com.melink.bqmmsdk.ui.keyboard.BQMMKeyboard
+        android:id="@+id/chat_msg_input_box"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:visibility="gone" />
 </LinearLayout>
